--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ html{
 
 body{
     width: 100vw;
+    height: 100vh;
     max-width: 100%;
     max-height: 100%;
 }
@@ -44,7 +45,8 @@ body{
 header{
     display: flex;
     background-color: var(--top_header_background_color);
-    padding: 20px;
+    padding: 0 20px;
+    margin-bottom: 10px;
     justify-content: space-between;
 }
 
@@ -79,7 +81,7 @@ nav{
 }
 
 .container_options{
-    background-color: rgba(27, 27, 27, 0.815);
+    background-color: rgba(27, 27, 27, 0.911);
     padding: 20px 20px 1000px 5px;
     border-radius: 8px 0 0 0;
 }
@@ -113,6 +115,74 @@ nav{
         height: 1214px;
     }
 }
+
+/* ARRANCO MAIN /////// HERO SECTION ////////////////////////// */
+
+.slider{
+    width: 95%;
+    margin: auto;
+    overflow: hidden;
+    border: var(--top_header_background_color) 1px solid;
+}
+
+.slider ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: slide_imagenes 20s infinite;
+}
+.slider li{
+    width: 100%;
+    list-style: none;
+}
+.slider img{
+    width: 100%;
+}
+
+@keyframes slide_imagenes {
+
+    0%{ margin-left: 0; }
+    20%{margin-left: 0; }
+    25%{
+        margin-left: -100%;
+    }    
+    45%{
+        margin-left: -100%;
+    }
+    50%{
+        margin-left: -200%;
+    }
+    70%{
+        margin-left: -200%;
+    }
+    75%{
+        margin-left: -300%;
+    }
+    100%{
+        margin-left: -300%;
+    }
+
+}
+
+.container_titulo{
+    background-color: #111111;
+    display: flex;
+    position: absolute;
+    top: 570px;
+    
+    justify-content: center;
+    padding: 40px 0;
+    width: 100%;
+}
+.container_titulo h1{
+    color: white;
+    font-size: 50px;
+}
+
+
+
+
+
 
 /* MEDIA QUERY PARA TABLET //////////////////////////////////////////////// */
 
