--- a/styles.css
+++ b/styles.css
@@ -169,16 +169,19 @@ nav{
     display: flex;
     position: absolute;
     top: 570px;
-    
     justify-content: center;
-    padding: 40px 0;
+    padding: 30px 0;
     width: 100%;
+    flex-direction: column;
+    align-items: center;
 }
 .container_titulo h1{
     color: white;
     font-size: 50px;
 }
-
+.container_titulo p{
+    color: white;
+}
 
 
 
@@ -230,6 +233,16 @@ nav{
         color: var(--text_color_default);
     }
 
+    /* HERO SECTION /////////////////////////////////////// */
+
+    .slider{
+        width: 60%;
+        box-shadow: 1px 0px 16px 6px rgba(0,0,0,0.19);
+    }
+    .container_titulo{
+        top: 900px;
+    }
+
 
 }
 
@@ -237,6 +250,7 @@ nav{
 
 @media  screen and (min-width:1200px) {
 
+    /* HEADER NAV BAR //////////////////////// */
     html{
         font-size: 20px;
     }  
@@ -258,6 +272,15 @@ nav{
     }
     .options{
         margin-left: 40px;
+    }
+
+    /* HERO SECTION ////////////////////// */
+
+    .slider{
+        display: none;
+    }
+    .container_titulo{
+        display: none;
     }
     
 }
