--- a/styles.css
+++ b/styles.css
@@ -233,6 +233,7 @@ nav {
     font-size: 17px;
     padding: 20px;
     margin: 20px;
+    cursor: pointer;
 }
 
 /* NUESTRAS COLECCIONES /////////////////////////////////////////////////////////////// */
@@ -585,6 +586,12 @@ footer i{
     .container_colecciones ul{
         flex-direction: row;
         gap: 50px;
+    }
+
+    /* contactanos //////////// */
+
+    .boton-submit{
+        cursor: pointer;
     }
 
 
